# CypherBenchAU

./: .env.example  .gitignore  README.md  benchmark.py  docker-compose.yml  llm_verification.py  local.env.example  pyproject.toml
output/curated_200_v4/: _new_corruption_ids.txt  _replacement_plan.json  full_art.json  full_biology.json  full_company.json  full_fictional_character.json  full_flight_accident.json  full_geography.json  full_movie.json  full_nba.json  full_politics.json  full_soccer.json  full_terrorist_attack.json
output/curated_200_v4/verification/: llm_verified_art.json  llm_verified_biology.json  llm_verified_company.json  llm_verified_fictional_character.json  llm_verified_flight_accident.json  llm_verified_geography.json  llm_verified_movie.json  llm_verified_nba.json  llm_verified_politics.json  llm_verified_soccer.json  llm_verified_terrorist_attack.json
scripts/: load_graph.py
scripts/dataset_construction/: curate_dataset.py  find_clean_replacements.py  run_all.sh  substitute_bad_samples.py  verify_all.sh
scripts/evaluation/: cache_query_results.py  check_soft_match_batch.py  compute_all_metrics.py  eval_v4.py  evaluate.py  run_benchmark.sh  run_benchmark_v4_new.sh  run_evaluation.py  run_evaluation_batch.py  value_only_eval.py
src/cb_corruptions/: cli.py  cypher_parser.py  cypher_substitutor.py  graph_analysis.py  llm.py  models.py  pipeline.py  schema.py  schema_loader.py
src/cb_corruptions/corruptions/: __init__.py  a1_relation_ambiguity.py  a2_property_ambiguity.py  (+8 more)
tests/verification/: test_evaluator.py  test_utils.py
(+6 files in other folders)
